src/styles.css
* {
  background-color: #f5f3ef;
  font-family: "Merienda", cursive;
  color: #3a3328;
}

body {
  padding: 5px;
}

nav {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  gap: 10px;
}

nav button {
  flex: 1;
  background-color: #963442;
  border-radius: 8px;
  border-style: none;
  box-sizing: border-box;
  color: #ffffff;
  cursor: pointer;
  display: inline-block;
  font-size: 14px;
  font-weight: 500;
  height: 40px;
  list-style: none;
  margin: 0;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: color 100ms;
  vertical-align: baseline;
  user-select: none;
  -webkit-user-select: none;
}

nav button:hover {
  background-color: #b55362;
}

nav button:active {
  background-color: #e9b107;
  color: #963442;
}

/* #content {
  padding-top: 50px;
  padding-right: 30px;
  padding-bottom: 50px;
  padding-left: 80px;
} */

.main-container {
  margin-left: auto;
  margin-left: auto;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-bottom: 50px;
}

.main-container img {
  max-width: 500px;
  min-width: 200px;
  width: 90vw;
  height: auto;
  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
}

h1 {
  text-align: center;
  font-family: "Chango", sans-serif;
  color: #963442;
  font-size: 2em;
}

h2 {
  text-align: center;
  font-size: 1.5em;
  color: #3587a2;
}

.menu-item h2,
.main-container h2 {
  margin-top: 25px;
}

h3 {
  text-align: center;
  font-size: 22px;
  color: #3a3328;
}

strong {
  color: #e9b107;
}

p {
  font-size: 1em;
  line-height: 35px;
}

.padded {
  padding-left: 3em;
  padding-right: 3em;
}

.menu-container {
  display: grid;
  grid-template-columns: 1fr;
  gap: 3em;
  max-width: 800px;
  margin: 0 auto;
  padding: 20px;
}

.menu-item span {
  color: #e9b107;
  font-weight: bold;
  font-size: larger;
  margin-top: auto;
}

.menu-item {
  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
  padding: 20px;
  margin-bottom: 20px;
  border-radius: 5px;
  display: flex;
  flex-direction: column;
}

.about-container {
  max-width: 800px;
  margin: 20px auto;
  padding: 0 20px;
}

#about-us {
  text-align: center;
}

.restaurant-image {
  width: 100%;
  max-width: 500px;
  min-width: 200px;
  border-radius: 10px; /* Rounded corners for the image */
  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
  margin-bottom: 20px;
}

footer {
  position: fixed;
  left: 0;
  bottom: 0;
  width: 100%;
  color: white;
  text-align: center;
}

/* Desktop Responsive! */

@media only screen and (min-width: 1000px) {
  * {
    background-color: #f5f3ef;
    font-family: "Merienda", cursive;
    color: #3a3328;
  }

  body {
    height: 100vh;
  }

  nav {
    display: flex;
    justify-content: space-evenly;
    gap: 10px;
  }

  nav button {
    flex: 1;
    background-color: #963442;
    border-radius: 8px;
    border-style: none;
    box-sizing: border-box;
    color: #ffffff;
    cursor: pointer;
    display: inline-block;
    font-size: 14px;
    font-weight: 500;
    height: 40px;
    list-style: none;
    margin: 0;
    outline: none;
    position: relative;
    text-align: center;
    text-decoration: none;
    transition: color 100ms;
    vertical-align: baseline;
    user-select: none;
    -webkit-user-select: none;
  }

  nav button:hover {
    background-color: #b55362;
  }

  nav button:active {
    background-color: #e9b107;
    color: #963442;
  }

  #content {
    padding-top: 50px;
    padding-right: 30px;
    padding-bottom: 50px;
    padding-left: 80px;
  }

  .main-container {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 20px;
    justify-content: center;
    align-items: center;
    margin-bottom: 40px;
  }

  .main-container .left {
    grid-column: 1;
    justify-self: center;
  }

  .main-container img {
    justify-self: center;
    grid-row: 1 / 2;
    grid-column: 2;
    width: auto;
    height: auto;
    height: 50vh;
    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
  }

  h1 {
    text-align: center;
    font-family: "Chango", sans-serif;
    color: #963442;
    font-size: 62px;
  }

  h2 {
    margin-top: 70px;
    text-align: center;
    font-size: 32px;
    color: #3587a2;
  }

  .menu-item h2,
  .main-container h2 {
    margin-top: 25px;
  }

  h3 {
    text-align: center;
    font-size: 22px;
    color: #3a3328;
  }

  strong {
    color: #e9b107;
  }

  p {
    font-size: 18px;
    line-height: 35px;
  }

  .padded {
    padding-left: 20vw;
    padding-right: 20vw;
  }

  .menu-container {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 20px;
    max-width: 800px;
    margin: 0 auto;
    padding: 20px;
  }

  .menu-item span {
    color: #e9b107;
    font-weight: bold;
    font-size: larger;
    margin-top: auto;
  }

  .menu-item {
    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
    padding: 20px;
    margin-bottom: 20px;
    border-radius: 5px;
    display: flex;
    flex-direction: column;
  }

  .about-container {
    max-width: 800px;
    margin: 20px auto;
    padding: 0 20px;
  }

  #about-us {
    text-align: center;
  }

  .restaurant-image {
    max-width: 100%;
    border-radius: 10px; /* Rounded corners for the image */
    margin-bottom: 20px;
    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
  }

  footer {
    position: fixed;
    left: 0;
    bottom: 0;
    width: 100%;
    color: white;
    text-align: center;
  }
}

